todo - expand list of items

--- a/TODO
+++ b/TODO
@@ -12,8 +12,12 @@ TODO:
 * efm: thumbs for music gettign album art like rage
 * efm: thumbs for videos with movie posters like rage
 * efm: show symlink info in icon
+* efm: fuse support (mtp, sshfs, cifs/smb etc.)
 * music-control: fix aspect ratio of album cover image
 * shot: add manual cropping ability
 * shot: add simple free draw, box, line and text on top of shot before save
+* bz5: add icon set for actions/states per bt device (pair.unpair, etc.)
+* bz5: add obex agent support integrated with efm for sharing via bt
+  and downloads when received via obex bt (~/Downloads/...)
 
 DONE:
