--- a/po/fr.po
+++ b/po/fr.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: Enlightenment DR17\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-01 18:48+0200\n"
-"PO-Revision-Date: 2019-06-18 18:42+0200\n"
+"PO-Revision-Date: 2019-06-26 17:27+0200\n"
 "Last-Translator: Philippe Jean Guillaumie <similar@orange.fr>\n"
 "Language-Team: French\n"
 "Language: fr\n"
@@ -27,7 +27,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
 "X-Launchpad-Export-Date: 2014-09-07 06:08+0000\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.0.6\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
 #: src/bin/e_about.c:17
@@ -564,27 +564,27 @@ msgstr "Écran"
 
 #: src/bin/e_actions.c:3542
 msgid "Send Mouse To Screen 0"
-msgstr "Envoyer le curseur à l'écran 0"
+msgstr "Envoyer le pointeur à l'écran 0"
 
 #: src/bin/e_actions.c:3544
 msgid "Send Mouse To Screen 1"
-msgstr "Envoyer le curseur à l'écran 1"
+msgstr "Envoyer le pointeur à l'écran 1"
 
 #: src/bin/e_actions.c:3546
 msgid "Send Mouse To Screen..."
-msgstr "Envoyer le curseur à l'écran …"
+msgstr "Envoyer le pointeur à l'écran …"
 
 #: src/bin/e_actions.c:3552
 msgid "Send Mouse Forward 1 Screen"
-msgstr "Envoyer le curseur à l'écran suivant"
+msgstr "Envoyer le pointeur à l'écran suivant"
 
 #: src/bin/e_actions.c:3554
 msgid "Send Mouse Back 1 Screen"
-msgstr "Envoyer le curseur à l'écran précédent"
+msgstr "Envoyer le pointeur à l'écran précédent"
 
 #: src/bin/e_actions.c:3556
 msgid "Send Mouse Forward/Back Screens..."
-msgstr "Envoyer le curseur … écrans plus loin"
+msgstr "Envoyer le pointeur … écrans plus loin"
 
 #: src/bin/e_actions.c:3561
 msgid "Dim"
@@ -632,19 +632,19 @@ msgstr "Déplacer au centre"
 
 #: src/bin/e_actions.c:3596
 msgid "Move/resize to upper-left quadrant"
-msgstr "Déplacer / redimensionner vers quadrant haut gauche"
+msgstr "Déplacer / Redimensionner vers quadrant haut gauche"
 
 #: src/bin/e_actions.c:3601
 msgid "Move/resize to upper-right quadrant"
-msgstr "Déplacer / redimensionner vers quadrant haut droit"
+msgstr "Déplacer / Redimensionner vers quadrant haut droit"
 
 #: src/bin/e_actions.c:3606
 msgid "Move/resize to lower-left quadrant"
-msgstr "Déplacer / redimensionner vers quadrant bas gauche"
+msgstr "Déplacer / Redimensionner vers quadrant bas gauche"
 
 #: src/bin/e_actions.c:3611
 msgid "Move/resize to lower-right quadrant"
-msgstr "Déplacer / redimensionner vers quadrant bas droit"
+msgstr "Déplacer / Redimensionner vers quadrant bas droit"
 
 #: src/bin/e_actions.c:3616
 msgid "Move To Coordinates..."
@@ -2061,7 +2061,7 @@ msgstr "Erreur : Gadget"
 #: src/bin/e_gadcon.c:1425
 #, c-format
 msgid "%s does not support disabling autoscrolling"
-msgstr "%s ne gère pas le défilement automatique"
+msgstr "%s ne gère pas la désactivation du défilement automatique"
 
 #: src/bin/e_gadcon.c:1701 src/bin/e_int_client_menu.c:145
 msgid "Move to"
@@ -2233,11 +2233,11 @@ msgstr "Verrous génériques"
 
 #: src/bin/e_int_client_locks.c:286
 msgid "Prevent this window from moving on its own"
-msgstr "Empêcher la fenêtre de s'auto-redimensionner"
+msgstr "Empêcher cette fenêtre de se déplacer toute seule"
 
 #: src/bin/e_int_client_locks.c:288
 msgid "Prevent this window from being changed by me"
-msgstr "Empêcher la fenêtre d'être modifiée par moi"
+msgstr "Empêcher cette fenêtre d'être modifiée par moi"
 
 #: src/bin/e_int_client_locks.c:290
 msgid "Prevent this window from being closed"
@@ -4419,19 +4419,19 @@ msgstr "Coin inférieur droit"
 
 #: src/bin/e_shelf.c:76
 msgid "Left-top Corner"
-msgstr "Coin supérieur gauche"
+msgstr "Coin sup. gauche vertical"
 
 #: src/bin/e_shelf.c:77
 msgid "Right-top Corner"
-msgstr "Coin supérieur droit"
+msgstr "Coin sup. droit vertical"
 
 #: src/bin/e_shelf.c:78
 msgid "Left-bottom Corner"
-msgstr "Coin inférieur gauche"
+msgstr "Coin inf. gauche vertical"
 
 #: src/bin/e_shelf.c:79
 msgid "Right-bottom Corner"
-msgstr "Coin inférieur droit"
+msgstr "Coin inf. droit vertical"
 
 #: src/bin/e_shelf.c:319 src/bin/e_shelf.c:1088
 #, c-format
@@ -6423,7 +6423,7 @@ msgstr "Paramètres de la souris"
 
 #: src/modules/conf_interaction/e_int_config_mouse.c:154
 msgid "Show Cursor"
-msgstr "Afficher le curseur"
+msgstr "Afficher le pointeur"
 
 #: src/modules/conf_interaction/e_int_config_mouse.c:169
 msgid "E Theme"
@@ -6435,7 +6435,7 @@ msgstr "Effets quand inactif"
 
 #: src/modules/conf_interaction/e_int_config_mouse.c:191
 msgid "Cursor"
-msgstr "Curseur"
+msgstr "Pointeur"
 
 #: src/modules/conf_interaction/e_int_config_mouse.c:198
 msgid "Mouse Hand"
@@ -6626,7 +6626,7 @@ msgstr "Gadgets"
 
 #: src/modules/conf_menus/e_int_config_menus.c:276
 msgid "Show gadget settings in top-level"
-msgstr "Paramétrage affiché au niveau supérieur"
+msgstr "Afficher les paramètres du gadget au premier niveau"
 
 #: src/modules/conf_menus/e_int_config_menus.c:289
 msgid "Margin"
@@ -6645,7 +6645,7 @@ msgstr "%2.0f pixels"
 
 #: src/modules/conf_menus/e_int_config_menus.c:294
 msgid "Cursor Margin"
-msgstr "Marge du curseur"
+msgstr "Marge du pointeur"
 
 #: src/modules/conf_menus/e_int_config_menus.c:299
 msgid "Autoscroll"
@@ -7076,7 +7076,7 @@ msgstr "Boutons"
 
 #: src/modules/conf_theme/e_int_config_fonts.c:86
 msgid "Slider"
-msgstr "Slider"
+msgstr "Curseur"
 
 #: src/modules/conf_theme/e_int_config_fonts.c:87
 msgid "Radio Buttons"
@@ -7525,7 +7525,7 @@ msgstr "Au clic"
 #: src/modules/conf_window_manipulation/e_int_config_focus.c:264
 #: src/modules/conf_window_manipulation/e_int_config_focus.c:352
 msgid "Pointer"
-msgstr "Curseur"
+msgstr "Pointeur"
 
 #: src/modules/conf_window_manipulation/e_int_config_focus.c:266
 msgid "Sloppy"
@@ -7606,11 +7606,11 @@ msgstr "Déplacement"
 
 #: src/modules/conf_window_manipulation/e_int_config_focus.c:336
 msgid "Prevent all forms of pointer warping"
-msgstr "Empêcher tout déplacement automatique du curseur"
+msgstr "Empêcher tout déplacement automatique du pointeur"
 
 #: src/modules/conf_window_manipulation/e_int_config_focus.c:339
 msgid "Slide pointer to a new window which is focused"
-msgstr "Glisser le curseur vers la nouvelle fenêtre focalisée"
+msgstr "Glisser le pointeur vers une nouvelle fenêtre focalisée"
 
 #: src/modules/conf_window_manipulation/e_int_config_focus.c:344
 msgid "Warp speed"
@@ -7710,7 +7710,7 @@ msgstr "Ne pas masquer les gadgets"
 
 #: src/modules/conf_window_manipulation/e_int_config_window_display.c:186
 msgid "Place at mouse pointer"
-msgstr "Placer au curseur de la souris"
+msgstr "Placer au pointeur de la souris"
 
 #: src/modules/conf_window_manipulation/e_int_config_window_display.c:189
 msgid "Place manually with the mouse"
@@ -8553,24 +8553,25 @@ msgid ""
 "<hilight>&lt;ctrl+3&gt;</hilight> toggle thumb view modes"
 msgstr ""
 "  L'omnipotence selon <hilight>Omni</hilight>...<ps/>  Tapez juste les "
-"premières lettres de ce que vous recherchez. <ps/>  Utilisez les touches "
-"<hilight>&lt;Flèche haut/bas&gt;</hilight> pour choisir dans la liste.<ps/>  "
-"Appuyez sur <hilight>&lt;Tabulation&gt;</hilight> pour sélectionner une "
-"action, puis sur  <hilight>&lt;Entrée&gt;</hilight>.<ps/>  Cette page ne "
-"s'affichera pas lors de la prochaine utilisation d'<hilight>Omni</hilight>."
-"<ps/>    <hilight>&lt;Échap&gt;</hilight> ferme cette boîte de dialogue<ps/"
-">    <hilight>&lt;?&gt;</hilight> affiche cette page<ps/>    <hilight>&lt;"
-"Entrée&gt;</hilight> exécute une action<ps/>    <hilight>&lt;Ctrl+Entrée&gt;"
-"</hilight> exécute une action et continue<ps/>    <hilight>&lt;tab&gt;</"
-"hilight> passe d'un sélecteur à l'autre<ps/>    <hilight>&lt;Ctrl"
-"+Tabulation&gt;</hilight> détail des entrées (ça dépend du greffon)<ps/>    "
-"<hilight>&lt;Ctrl+« x »&gt;</hilight> va au greffon commençant par la lettre "
-"« ... »<ps/>    <hilight>&lt;Ctrl+Flèche gauche/droite&gt;</hilight> circule "
-"parmi les greffons<ps/>    <hilight>&lt;ctrl+Flèche haut/bas&gt;</hilight> "
-"va au premier / dernier élément<ps/>    <hilight>&lt;Ctrl+1&gt;</hilight> "
-"commute le mode d'affichage (quitte cette page ;)<ps/>    <hilight>&lt;Ctrl"
-"+2&gt;</hilight> commute le mode d'affichage de la liste<ps/>    "
-"<hilight>&lt;Ctrl+3&gt;</hilight> commute le mode d'affichage des vignettes."
+"premières lettres de ce que vous recherchez. <ps/>  Utilisez la souris ou "
+"<hilight>&lt;les flèches du clavier&gt;</hilight> pour choisir dans la liste "
+"des éléments.<ps/>  Appuyez sur <hilight>&lt;Tab&gt;</hilight> pour "
+"sélectionner une action, puis sur  <hilight>&lt;Entrée&gt;</hilight>.<ps/>  "
+"Cette page ne s'affichera pas lors de la prochaine utilisation "
+"d'<hilight>Omni</hilight>.<ps/>    <hilight>&lt;Échap&gt;</hilight> ferme "
+"cette boîte de dialogue<ps/>    <hilight>&lt;?&gt;</hilight> affiche cette "
+"page<ps/>    <hilight>&lt;Entrée&gt;</hilight> exécute une action<ps/>    "
+"<hilight>&lt;Ctrl+Entrée&gt;</hilight> exécute une action et continue<ps/"
+">    <hilight>&lt;Tab&gt;</hilight> passe d'un sélecteur à l'autre<ps/>    "
+"<hilight>&lt;Ctrl+Tab&gt;</hilight> détail des entrées (ça dépend du "
+"greffon)<ps/>    <hilight>&lt;Ctrl+« x »&gt;</hilight> va au greffon "
+"commençant par la lettre « x »<ps/>    <hilight>&lt;Ctrl+Flèche gauche / "
+"droite&gt;</hilight> circule parmi les greffons<ps/>    <hilight>&lt;Ctrl"
+"+Flèche haut / bas&gt;</hilight> va au premier / dernier élément<ps/>    "
+"<hilight>&lt;Ctrl+1&gt;</hilight> commute le mode d'affichage (quitte cette "
+"page ;)<ps/>    <hilight>&lt;Ctrl+2&gt;</hilight> commute le mode "
+"d'affichage en liste<ps/>    <hilight>&lt;Ctrl+3&gt;</hilight> commute le "
+"mode d'affichage des vignettes."
 
 #: src/modules/everything/evry_view_tabs.c:93
 msgid "Back"
@@ -8974,7 +8975,7 @@ msgstr "Incrustation sur le bureau"
 
 #: src/modules/gadman/e_mod_gadman.c:1064
 msgid "Begin move/resize"
-msgstr "Déplacer/Redimensionner"
+msgstr "Déplacer / Redimensionner"
 
 #: src/modules/gadman/e_mod_gadman.c:1096
 msgid "Free"
